update words
